# mailapi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Agent.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  crypto.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  api_key.py  enums.py  logs.py  mail_account.py  user.py
backend/app/schemas/: api_keys.py  auth.py  logs.py  mail_accounts.py  users.py
backend/app/services/: api_keys.py  audit_logs.py  mail_accounts.py  mail_fetch_logs.py  mail_fetchers.py  microsoft_oauth.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 20260613_0001_foundation_schema.py
docker/: entrypoint.sh
docs/: development-workflow.md  development-workflow.zh-CN.md
docs/agent/tasks/: TASK-20260613-phase1-backend-scaffold.md  (+17 more)
docs/deployment/: baota-docker-nginx.zh-CN.md
docs/manual-testing/: outlook-oauth-fetch.zh-CN.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.ts
tests/: test_deployment_files.py  test_frontend_mail_account_filters.py  test_frontend_user_flows.py
tests/backend/: conftest.py  test_api_keys.py  test_auth.py  test_crypto.py  test_database_metadata.py  test_health.py  test_logs_api.py  test_mail_accounts_api.py  test_mail_accounts_service.py  test_mail_api.py  test_mail_fetchers.py  test_users_api.py  test_verification_dashboard_api.py
(+43 files in other folders)
