[project]
name = "mailapi"
version = "0.1.0"
description = "Outlook OAuth2 verification-code mail retrieval platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "cryptography>=44.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "greenlet>=3.1.0",
  "httpx>=0.28.0",
  "psycopg2-binary>=2.9.12",
  "pwdlib[argon2]>=0.2.1",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "docker*", "docs*", "tests*"]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"backend/app/api/routes/*" = ["B008"]
"backend/migrations/versions/*" = ["E501"]
